2008-05-01  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* lang/Makefile.am:
	* lang/desktop-control-de.dict:
	
	Added support for German

2008-05-01  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* lang/desktop-control-ru.dict: 
	
	Fixes for handling Russian.

	* src/action.c (voice_control_action_append_commands):
	* src/gstsphinxsink.c (gst_sphinx_decoder_init),
	(gst_sphinx_sink_process_chunk), (gst_sphinx_construct_fsg):
	* src/gstsphinxsink.h: 
	
	Bumped pocketsphinx requirement and updated to new API.

2008-01-16  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* configure.ac:
	* src/gstsphinxsink.c: (gst_sphinx_sink_render):
	* src/voice-control.c: (control_stop), (on_sink_initialization),
	(on_sink_calibration), (on_sink_listening), (on_sink_ready),
	(setup_voice_control_widget):
	
	Add configure option --enable-debug to dump raw audio.

2007-12-08  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* data/GNOME_VoiceControlApplet.xml:
	* lang/desktop-control.dict:
	* src/Makefile.am:
	* src/action.c: (do_action):
	* src/spi-listener.c: (control_spi_set_voice_control_pipeline),
	(control_spi_listener_keys_listener_cb),
	(control_spi_listener_init), (control_spi_listener_start),
	(control_spi_listener_stop):
	* src/spi-listener.h:
	* src/voice-control.c: (keypress_control_start), (control_stop),
	(on_sink_initialization), (on_sink_calibration),
	(on_sink_listening), (on_sink_ready), (display_about_dialog),
	(setup_voice_control_widget), (main):
	
	Patch for keypress and documentation from Raphael.

2007-10-23  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* configure.ac:
	* NEWS:
	
	Update for release 0.3.

2007-08-18  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* configure.ac:
	
	Raise requirement to pocketsphinx-0.4

2007-08-14  David Huggins-Daines <dhuggins@cs.cmu.edu>

	* src/gstsphinxsink.c:
	
	Require new wsj1 model.

2007-08-10  Marius Andreiana <marius.andreiana@gmail.com>

	* lang/desktop-control.dict:
	* src/action.c: (do_action):
	
	Keyboard actions implemented